[package]
name = "rsls"
version = "0.1.0"
authors = ["ozyx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[[bin]]
name = "rsls"
path = "src/bin/main.rs"
doc = false

[lib]
name = "rsls"
path = "src/rsls.rs"